--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inventory-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "A command-line inventory management application that allows users to efficiently track and manage their inventory. This app supports functionalities such as adding, updating, deleting, and viewing inventory items. Designed for simplicity and ease of use, it's perfect for small businesses and personal projects looking for a straightforward inventory solution.",
   "main": "index.js",
   "scripts": {
     "index": "node index.js index",
@@ -11,7 +11,7 @@
     "destroy": "node index.js destroy"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexandra Perez",
   "license": "ISC",
   "dependencies": {
     "nanoid": "^3.3.7"
