--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Alexandra Perez",
   "license": "ISC",
   "dependencies": {
+    "readline": "^1.4.0",
     "nanoid": "^3.3.7"
   }
 }
