Add clear shopping cart function

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "show": "node index.js show",
     "update": "node index.js update",
     "delete": "node index.js delete",
-    "add": "node index.js add"
+    "add": "node index.js add",
+    "cancel": "node index.js cancel"
   },
   "keywords": [],
   "author": "Alexandra Perez",
